# Object-Oriented-Programming

./: main.cpp
LAB 1/: CMakeLists.txt  test_turkish_number.cpp  turkish_number.cpp  turkish_number.h  turkish_number_converter.cpp
LAB 2/: CMakeLists.txt  main.cpp  test_twelve.cpp  twelve.cpp  twelve.h
LAB 3/: CMakeLists.txt  figures.c++  main.c++  tests.c++
LAB 4/: CMakeLists.txt  figures.c++  main.c++  tests.c++
LAB5/: CMakeLists.txt  func.c++  func.h  main.c++  tests.c++
LAB6/: CMakeLists.txt  func.cpp  func.h  main.cpp  tests.cpp
LAB7/: CMakeLists.txt  bull.cpp  bull.h  game.cpp  game.h  main.cpp
LAB7+/: CMakeLists.txt  game.cpp  game.h  tests.cpp
